fix favorite spacing

--- a/src/Player/player.css
+++ b/src/Player/player.css
@@ -34,7 +34,7 @@
 }
 
 .player__favorite {
-  margin: 0 4vw 0 2vw;
+  margin: 0 4%;
 }
 
 .player__icon-cont {
